# Resume-Analyzer

./: .gitignore  app.py  prompt.py  pyproject.toml  requirements.txt  resumeAnalyzer.py
.devcontainer/: devcontainer.json
