[project]
name = "miniproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "document>=1.0",
    "dotenv>=0.9.9",
    "groq>=1.5.0",
    "pydantic>=2.13.4",
    "pypdf>=6.14.2",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.59.2",
]
